--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,11 @@ language: android
 android:
         components:
                 - platform-tools
-                - build-tools-26.0.2
-                - android-26
+                - build-tools-27.0.1
+                - android-27
 script:
         - ./gradlew build
+        - ./gradlew clean assembleDebug test lint
 before_install:
         - chmod +x gradlew
 
