--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Ui.MainActivity"
+            android:name=".Ui$MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Ui.ConverterActivity"
+            android:name=".Ui$ConverterActivity"
             android:windowSoftInputMode="adjustResize"
             android:parentActivityName=".Ui.MainActivity">
         </activity>
