--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
         applicationId "com.bad_coders.moneyconverter"
         minSdkVersion 21
         targetSdkVersion 27
+        multiDexEnabled true
         versionCode gitVersionCode
         versionName gitVersionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -42,21 +43,42 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.0.1'
-    implementation 'com.android.support:design:27.0.1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    // Support Libs
+    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:design:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:support-v4:27.0.1'
+    implementation 'com.android.support:support-v4:27.0.2'
+
+    //Google Play Services
+    compile 'com.google.android.gms:play-services-auth:11.6.2'
+
+    //Test
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    testImplementation "org.mockito:mockito-core:2.12.0"
+    testImplementation 'org.mockito:mockito-core:2.12.0'
     testImplementation 'org.hamcrest:hamcrest-junit:2.0.0.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+    //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
-    implementation "android.arch.persistence.room:runtime:1.0.0"
+
+    //Room - db
+    implementation 'android.arch.persistence.room:runtime:1.0.0'
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
 
+    //Firebase
+    implementation 'com.google.firebase:firebase-core:11.6.2'
+    implementation 'com.google.firebase:firebase-auth:11.6.2'
+
+    //Firebase UI
+    implementation 'com.firebaseui:firebase-ui-auth:3.1.0'
+
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
+
+apply plugin: 'com.google.gms.google-services'
